iRedMail-0.7.4:
    * Add missing INDEXes for Amavisd database: msgs.mail_id, (msgs.content,
      msgs.time_num), quarantine.mail_id.
      Thanks rjnena <rjnena@gmail>, David <dcharbonnier@gmail>.

iRedMail-0.7.3:
    * Add enabledService=lda for newly created LDAP mail user. Required by
      Dovecot 2.x.
    * Works on CentOS 6.0, RHEL 6.x, Scientific Linux 6.x.
    * Mbox format mailbox is not supported anymore.
    * Add smtp-amavis_destination_recipient_limit=1 in Postfix for concurrency
      per-recipient limit. Thanks beez <jason@indo.net.id>.
    * Package update:
        + Roundcube webmail -> 0.5.4
        + iRedAdmin -> 0.1.6
        + phpMyAdmin -> 3.4.3.2

iRedMail-0.7.2:
    * Works on Ubuntu 11.04.
    * Enable LDAPS on FreeBSD by default. Thanks Markus Wyrsch <W-Chi@>.
    * Improvements:
        + Add alias domain support in postfix virtual_mailbox_domains (MySQL
          backend special).
    * Fixed:
        + Set 'ServerTokens' to 'ProductOnly' in Apache on Debian/Ubuntu.
          Thanks c33s@forum.
    * Package update:
        + Roundcube webmail -> 0.5.3
        + phpLDAPadmin -> 1.2.1.1
        + phpMyAdmin -> 3.4.1
        + iRedAPD -> 1.3.6. Fix two issues for MySQL backend.
        + iRedAdmin -> 0.1.5. Security fix edition.

iRedMail-0.7.1:
    * Fix incorrect icon path in awstats. Thanks <rannal@> for the feedback.
    * Use 2048 as default SSL key length. Thanks mike.f@forum <m.fresel@>.
    * Increase Postfix timeout seconds: smtp_data_init_timeout (120s -> 240s),
      and smtp_data_xfer_timeout (180s -> 600s). Hope to avoid some timeout
      issues. Thanks write4saini@forum, mbsouth@forum.
    * Integrate Fail2ban. Note: It doesn't work on FreeBSD yet.
    * Support domain alias in postfix relay_domains (MySQL backend special).
      Thanks atros@forum.
    * Support domain alias in mail alias, catch-all account.
    * Package update/changes:
        + Roundcube -> 0.5.2
        + iRedAPD -> 1.3.5

iRedMail-0.7.0: