@@ -41,6 +41,9 @@ export DOVECOT_IMAP_PLUGINS='quota imap_quota autocreate'
 # Default quota type: maildir, dict:user::proxy::quotadict (quotadict).
 export DOVECOT_QUOTA_TYPE='dict:user::proxy::quotadict'
 
+# A symbol link to global sieve rule file.
+export DOVECOT_GLOBAL_SIEVE_FILE_SYMBOL='/etc/dovecot/dovecot.sieve'
+
 if [ X"${DISTRO}" == X"RHEL" ]; then
     export DOVECOT_VERSION='2'
     export DOVECOT_CONF='/etc/dovecot/dovecot.conf'
@@ -53,6 +56,7 @@ if [ X"${DISTRO}" == X"RHEL" ]; then
         export DOVECOT_VERSION='1.2'
         export DOVECOT_CONF='/etc/dovecot.conf'
         export DOVECOT_LDAP_CONF='/etc/dovecot-ldap.conf'
+        export DOVECOT_GLOBAL_SIEVE_FILE_SYMBOL='/etc/dovecot.sieve'
         export DOVECOT_MYSQL_CONF='/etc/dovecot-mysql.conf'
         export DOVECOT_REALTIME_QUOTA_CONF='/etc/dovecot-used-quota.conf'
         export DOVECOT_SHARE_FOLDER_CONF='/etc/dovecot-share-folder.conf'
@@ -97,6 +101,7 @@ elif [ X"${DISTRO}" == X"FREEBSD" ]; then
     export DOVECOT_MYSQL_CONF='/usr/local/etc/dovecot-mysql.conf'
     export DOVECOT_REALTIME_QUOTA_CONF='/usr/local/etc/dovecot-used-quota.conf'
     export DOVECOT_SHARE_FOLDER_CONF='/usr/local/etc/dovecot-share-folder.conf'
+    export DOVECOT_GLOBAL_SIEVE_FILE_SYMBOL='/usr/local/etc/dovecot.sieve'
     export DOVECOT_DELIVER='/usr/local/libexec/dovecot/deliver'
 fi
 
