@@ -1,4 +1,7 @@
 iRedMail-0.7.4:
+    * Fixed: Incorrect per-user sieve_dir setting in Dovecot.
+      Thanks cetex <oskar @cetex.se>.
+    * LDA (Dovecot deliver) now will move SPAM to Junk folder by default.
     * Add missing INDEXes for Amavisd database: msgs.mail_id, (msgs.content,
       msgs.time_num), quarantine.mail_id.
       Thanks rjnena <rjnena@gmail>, David <dcharbonnier@gmail>.
